sumo/tests/sumo/extended/emitter/errors/vtypedist/missing_id/errors.sumo
Error: MSTriggeredSource emitter: No vehicle type id given.
Quitting (on error).
